# CppGameDev

./: CMakeLists.txt  README.md  main.cpp
0_SphereWithMouse/: CMakeLists.txt
0_SphereWithMouse/src/: SphereWithMouse.cpp
1_OXGame/: CMakeLists.txt
1_OXGame/src/: OXGame.cpp
2_Survivor/: CMakeLists.txt
2_Survivor/includes/: animation.h  bullet.h  button.h  enemy.h
2_Survivor/shaders/: basicTriangle.vert  button.frag  button.vert  character.frag  character.vert
2_Survivor/src/: Survivor.cpp
3_PlantBattles/: CMakeLists.txt
3_PlantBattles/includes/: resource_manager.h  texture.h
4.1_InPractice_Debugging/: CMakeLists.txt  debugging.cpp
4.2_InPractice_TextRendering/: CMakeLists.txt  text_rendering.cpp
4.3_InPractice_2DGame/: CMakeLists.txt
4.3_InPractice_2DGame/includes/: rectangle.h  root_directory.h
4.3_InPractice_2DGame/src/: 2dgame.cpp  PlantBattles.cpp  ball_object.h  game.h  game_level.h  game_object.h  particle_generator.h  post_processor.h  power_up.h  sprite_renderer.h  text_renderer.h
includes/: audio_player.h  filesystem.h  root_directory.h.in  shader.h
src/: main  main.cpp
